--- a/package.json
+++ b/package.json
@@ -14,9 +14,20 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@tailwindcss/vite": "^4.1.4",
+		"autoprefixer": "^10.4.21",
+		"postcss": "^8.5.3",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"tailwindcss": "^4.1.4",
 		"typescript": "^5.0.0",
 		"vite": "^5.4.11"
+	},
+	"dependencies": {
+		"@sveltejs/adapter-node": "^5.2.12",
+		"@webtui/css": "^0.0.3",
+		"@webtui/plugin-nf": "^0.0.1",
+		"html-gl": "^0.3.2",
+		"html2canvas": "^1.4.1"
 	}
 }
