--- a/package.json
+++ b/package.json
@@ -24,10 +24,17 @@
 		"vite": "^5.4.11"
 	},
 	"dependencies": {
+		"@fortawesome/free-brands-svg-icons": "^6.7.2",
+		"@fortawesome/free-solid-svg-icons": "^6.7.2",
+		"@j4ckofalltrades/steam-webapi-ts": "^1.2.1",
 		"@sveltejs/adapter-node": "^5.2.12",
+		"@types/luxon": "^3.6.2",
 		"@webtui/css": "^0.0.3",
 		"@webtui/plugin-nf": "^0.0.1",
+		"discord.js": "^14.18.0",
 		"html-gl": "^0.3.2",
-		"html2canvas": "^1.4.1"
+		"html2canvas": "^1.4.1",
+		"luxon": "^3.6.1",
+		"svelte-fa": "^4.0.3"
 	}
 }
