--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.2.12",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@tailwindcss/vite": "^4.1.4",
+		"@types/node": "^22.15.14",
 		"autoprefixer": "^10.4.21",
 		"postcss": "^8.5.3",
 		"svelte": "^5.0.0",
@@ -27,7 +28,6 @@
 		"@fortawesome/free-brands-svg-icons": "^6.7.2",
 		"@fortawesome/free-solid-svg-icons": "^6.7.2",
 		"@j4ckofalltrades/steam-webapi-ts": "^1.2.1",
-		"@sveltejs/adapter-node": "^5.2.12",
 		"@types/luxon": "^3.6.2",
 		"@webtui/css": "^0.0.3",
 		"@webtui/plugin-nf": "^0.0.1",
