--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,5 +8,5 @@ jobs:
     runs-on: eepy-runner-set
     steps:
     - uses: actions/checkout@v4
-    - uses: cachix/install-nix-action@v31
+    # - uses: cachix/install-nix-action@v31
     - run: nix run -L '.#pushDockerImage'
