--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,4 +9,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     # - uses: cachix/install-nix-action@v31
-    - run: nix run -L '.#pushDockerImage'
+    - run: nix run -L '.#pushDockerImageActions'
