switch to kustomize and start using rev image tags

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,6 +7,12 @@ jobs:
     name: upload-docker-image
     runs-on: eepy-runner-set
     steps:
-    - uses: actions/checkout@v4
     # - uses: cachix/install-nix-action@v31
     - run: nix run -L '.#pushDockerImageActions'
+    - run: GIT_REV=${{ github.sha }} nu -c 'open .kube/version.yaml -r | from yaml | update value $"kokuzo.tailc38f.ts.net/eepy-site:($env.GIT_SHA)" | to yaml | save .kube/version.yaml -f'
+    - run: |
+        git config --global user.name 'GitHub Actions'
+        git config --global user.email 'actions@github.com'
+        git add .kube/version.yaml
+        git commit -m "update docker image tag"
+        git push
