--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,4 +15,4 @@ jobs:
         git config --global user.email 'actions@github.com'
         git add .kube/version.yaml
         git commit -m "update docker image tag"
-        git push
+        git push -f origin main:cd
